# SKrypton

./: .gitignore  .travis.yml  LICENSE.md  README.md  appveyor.yml  build.gradle  common.gradle  settings.gradle
docs/: packages.md
gradle/wrapper/: gradle-wrapper.properties
native/: .gitignore  CMakeLists.txt  build.gradle  copyQt.cmake  linux-build.gradle  windows-build.gradle
native/cmake/: copyQt-common.cmake  copyQt-linux.cmake  copyQt-windows.cmake
native/inc/: JQWidget.h  SKryptonApp.h  SKryptonBrowser.h  SKryptonEvent.h  SKryptonKeyEvent.h  SKryptonMouseEvent.h  SKryptonResizeEvent.h  SKryptonWebSettings.h  SKryptonWebView.h  SKryptonWheelEvent.h  SKryptonWidget.h  SKyrptonApp.h  VirtualCursor.h  WebViewHighlighter.h  headers.h
native/inc/jni/: com_waicool20_skrypton_jni_JNITest.h  jni_field_utils.h  jni_method_utils.h  jni_pointer_utils.h  jni_string_utils.h  jni_utils.h
native/inc/jni/headers/: com_waicool20_skrypton_jni_objects_QWidget.h  com_waicool20_skrypton_jni_objects_SKryptonApp.h  com_waicool20_skrypton_jni_objects_SKryptonEvent.h  com_waicool20_skrypton_jni_objects_SKryptonKeyEvent.h  com_waicool20_skrypton_jni_objects_SKryptonKeyEvent_Companion.h  com_waicool20_skrypton_jni_objects_SKryptonMouseEvent.h  com_waicool20_skrypton_jni_objects_SKryptonMouseEvent_Companion.h  com_waicool20_skrypton_jni_objects_SKryptonResizeEvent.h  com_waicool20_skrypton_jni_objects_SKryptonWebProfile.h  com_waicool20_skrypton_jni_objects_SKryptonWebProfile_Companion.h  com_waicool20_skrypton_jni_objects_SKryptonWebSettings.h  com_waicool20_skrypton_jni_objects_SKryptonWebSettings_Companion.h  com_waicool20_skrypton_jni_objects_SKryptonWebSettings_FontFamily.h  com_waicool20_skrypton_jni_objects_SKryptonWebSettings_FontSize.h  com_waicool20_skrypton_jni_objects_SKryptonWebSettings_WebAttribute.h  com_waicool20_skrypton_jni_objects_SKryptonWebView.h  com_waicool20_skrypton_jni_objects_SKryptonWebViewKt.h  com_waicool20_skrypton_jni_objects_SKryptonWebView_Factory.h  com_waicool20_skrypton_jni_objects_SKryptonWheelEvent.h  com_waicool20_skrypton_jni_objects_SKryptonWheelEvent_Companion.h  com_waicool20_skrypton_jni_objects_SKryptonWidget.h  com_waicool20_skrypton_jni_objects_WebViewHighlighter.h  com_waicool20_skrypton_jni_objects_WebViewHighlighter_Companion.h
native/inc/webview/: SKryptonWebProfile.h  SKryptonWebSettings.h  SKryptonWebView.h  SKryptonWebViewContainer.h  SKryptonWebViewEventHandler.h
native/qtconf/: qt.conf
native/qtconf/libexec/: qt.conf
native/rsc/: qt.conf  resources.qrc
native/src/: JNITest.cpp  JQWidget.cpp  SKryptonApp.cpp  SKryptonBrowser.cpp  SKryptonEvent.cpp  SKryptonKeyEvent.cpp  SKryptonMouseEvent.cpp  SKryptonResizeEvent.cpp  SKryptonWebSettings.cpp  SKryptonWebView.cpp  SKryptonWebViewContainer.cpp  SKryptonWidget.cpp  SKyrptonApp.cpp  VirtualCursor.cpp  WebViewHighlighter.cpp  jni_field_utils.cpp
native/src/jni/: jni_field_utils.cpp  jni_method_utils.cpp  jni_string_utils.cpp  jni_utils.cpp
native/src/main/cpp/: SKryptonApp.cpp  SKryptonKeyEvent.cpp  SKryptonWheelEvent.cpp  SKryptonWidget.cpp  WebViewHighlighter.cpp
native/src/main/cpp/jni/: jni_method_utils.cpp  jni_string_utils.cpp  jni_utils.cpp
native/src/main/cpp/webview/: SKryptonWebProfile.cpp  SKryptonWebSettings.cpp  SKryptonWebViewEventHandler.cpp  SKryptonWebView_JNI.cpp
native/src/main/kotlin/com/waicool20/skrypton/: SKryptonSetup.kt
native/src/main/kotlin/com/waicool20/skrypton/setup/: InstallView.kt  Installer.kt  SKryptonSetup.kt  Utils.kt  WelcomeView.kt
native/src/main/resources/: install.fxml  logback.xml  welcome.fxml
native/src/webview/: SKryptonWebView.cpp  SKryptonWebViewContainer.cpp  SKryptonWebViewEventHandler.cpp  SKryptonWebView_JNI.cpp
skrypton-api/: index-outline.html  index.html  package-list
skrypton-api/alltypes/: index.html
skrypton-api/com.waicool20.skrypton.enums/: index.html
skrypton-api/com.waicool20.skrypton.enums/-font-family/: -cursive-font.html  -fantasy-font.html  -fixed-font.html  -pictograph-font.html  -sans-serif-font.html  -serif-font.html  -standard-font.html  index.html
skrypton-api/com.waicool20.skrypton.enums/-font-size/: -default-fixed-font-size.html  -default-font-size.html  -minimum-font-size.html  -minimum-logical-font-size.html  index.html
skrypton-api/com.waicool20.skrypton.enums/-http-cache-type/: -disk-http-cache.html  -memory-http-cache.html  -no-cache.html  index.html
skrypton-api/com.waicool20.skrypton.enums/-key/: -key_-a-e.html  -key_-a.html  -key_-aacute.html  -key_-acircumflex.html  -key_-add-favorite.html  -key_-adiaeresis.html  -key_-agrave.html  -key_-alt-gr.html  -key_-alt.html  -key_-ampersand.html  -key_-any.html  -key_-apostrophe.html  -key_-application-left.html  -key_-application-right.html  -key_-aring.html  -key_-ascii-circum.html  -key_-ascii-tilde.html  -key_-asterisk.html  -key_-at.html  -key_-atilde.html  -key_-audio-cycle-track.html  -key_-audio-forward.html  -key_-audio-random-play.html  -key_-audio-repeat.html  -key_-audio-rewind.html  -key_-away.html  -key_-b.html  -key_-back-forward.html  -key_-back.html  -key_-backslash.html  -key_-backspace.html  -key_-backtab.html  -key_-bar.html  -key_-bass-boost.html  -key_-bass-down.html  -key_-bass-up.html  -key_-battery.html  -key_-blue.html  -key_-bluetooth.html  -key_-book.html  (+403 more)
skrypton-api/com.waicool20.skrypton.enums/-key-event-type/: -key-press.html  -key-release.html  -shortcut-override.html  get-for-id.html  id.html  index.html
skrypton-api/com.waicool20.skrypton.enums/-keyboard-modifiers/: -alt-modifier.html  -control-modifier.html  -group-switch-modifier.html  -keyboard-modifier-mask.html  -keypad-modifier.html  -meta-modifier.html  -no-modifier.html  -shift-modifier.html  (+2 more)
skrypton-api/com.waicool20.skrypton.jni/: index.html
skrypton-api/com.waicool20.skrypton.jni.objects/: index.html  web-view.html
skrypton-api/com.waicool20.skrypton.sikulix/: index.html  screen.html
skrypton-api/com.waicool20.skrypton.sikulix.input/: index.html
skrypton-api/com.waicool20.skrypton.util/: index.html  logger-for.html
(+473 files in other folders)
